--- a/SistemaLoja/SistemaLoja/SistemaLoja.csproj
+++ b/SistemaLoja/SistemaLoja/SistemaLoja.csproj
@@ -222,10 +222,17 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\carousel.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\01.png" />
+    <Content Include="Images\02.png" />
+    <Content Include="Images\03.png" />
+    <Content Include="Images\felipe.jpg" />
     <Content Include="Images\loader.gif" />
+    <Content Include="Images\tec1.png" />
+    <Content Include="Images\tec2.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
